--- a/Classter-Main/manifest.json
+++ b/Classter-Main/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "클래스터 - 메인",
-  "version": "1.5",
-  "description": "클래스팅 자동 매크로",
+  "name": "클래스터 - 통합 버전",
+  "version": "2.0",
+  "description": "클래스팅 자동 매크로 및 총괄평가",
   "permissions": [
     "storage",
     "activeTab",
-    "tabs"
+    "tabs",
+    "scripting"
   ],
   "host_permissions": [
     "https://www.classting.com/*",
